<?xml version="1.0" encoding="UTF-8"?>
<!--
This file is part of the ProVANT simulator project.
Licensed under the terms of the MIT open source license. More details at
https://github.com/Guiraffo/ProVANT-Simulator/blob/master/LICENSE.md
-->
<package format="2">
  <name>provant_simulator_sdf_parser</name>
  <version>0.0.0</version>
  <description>
    <p>The ProVANT Simulator SDF Parser package provides a static library that can read attributes and parameters from Simulation Description Format (SDF) elements.</p>
    <p>This package is intended to be used as a component of the Gazebo plugins developed in the the ProVANT simulator.</p>
  </description>

  <maintainer email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</maintainer>

  <license>MIT</license>

  <url type="website">http://provant.eng.ufmg.br/provantsimulator</url>
  <url type="repository">https://github.com/Guiraffo/ProVANT-Simulator.git</url>
  <url type="bugtracker">https://github.com/Guiraffo/ProVANT-Simulator/issues</url>

  <author email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>provant_simulator_cmake</build_depend>
  <build_export_depend>provant_simulator_cmake</build_export_depend>

  <build_depend>gazebo</build_depend>

  <depend>gazebo_ros</depend>
  <depend>boost</depend>
  <depend>provant_simulator_parser_utils</depend>

  <doc_depend>doxygen</doc_depend>
  <doc_depend>rosdoc_lite</doc_depend>

  <test_depend>rosunit</test_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>
</package>