<?xml version="1.0" encoding="UTF-8"?>
<!--
This file is part of the ProVANT simulator project.
Licensed under the terms of the MIT open source license. More details at
https://github.com/Guiraffo/ProVANT-Simulator/blob/master/LICENSE.md
-->
<package format="2">
  <name>provant_simulator_xml_reader</name>
  <version>0.0.0</version>
  <description>The provant_simulator_xml_reader package provides C++ classes
  that allow easy reading of values from XML files, and a specialized class for
  reading the values from the config.xml file used to set the simulation 
  parameters in the ProVANT Simulator.</description>

  <maintainer email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</maintainer>
  
  <license>MIT</license>

  <url type="website">http://provant.eng.ufmg.br/provantsimulator</url>
  <url type="repository">https://github.com/Guiraffo/ProVANT-Simulator.git</url>
  <url type="bugtracker">https://github.com/Guiraffo/ProVANT-Simulator/issues</url>

  <author email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</author>
  <author email="jonatan29campo@gmail.com">Jonatan Campos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>tinyxml2</build_depend>

  <build_export_depend>tinyxml2</build_export_depend>
  <build_export_depend>cmake_modules</build_export_depend>

  <exec_depend>tinyxml2</exec_depend>

  <exec_depend>cmake_modules</exec_depend>

  <test_depend>rosunit</test_depend>

  <export>

  </export>
</package>
