<?xml version="1.0" encoding="UTF-8"?>
<!--
This file is part of the ProVANT simulator project.
Licensed under the terms of the MIT open source license. More details at
https://github.com/Guiraffo/ProVANT-Simulator/blob/master/LICENSE.md
-->
<package format="2">
  <name>Database</name>
  <version>1.0.0</version>
  <description>
    <p>The Database package provides the launch files, models, worlds and scenarios for use with the ProVANT simulator</p>
  </description>

  <maintainer email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</maintainer>

  <license>MIT</license>

  <url type="website">http://provant.eng.ufmg.br/provantsimulator</url>
  <url type="repository">https://github.com/Guiraffo/ProVANT-Simulator.git</url>
  <url type="bugtracker">https://github.com/Guiraffo/ProVANT-Simulator/issues</url>

  <author email="avlara@hotmail.com">Arthur Viana Lara</author>
  <author email="jeduardo@ufmg.br">Júnio Eduardo de Morais Aquino</author>
  <author email="jonatan29campo@gmail.com">Jonatan Mota Campos</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller</exec_depend>
  <exec_depend>hector_mapping</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>